<resources>
    <string name="app_name">Panceto</string>
    <string name="txtBienvenida">Bienvenid@</string>
    <string name="bogot_centro">Bogotá Centro</string>
    <string name="descSuc1">Nuestra primera sucursal y la más grande. Gran espacio, 57 mesas 4 puestos, única con servicio de heladería.</string>
    <string name="carrera_10_34_14">Carrera 13 #34-14</string>
    <string name="todo">TODO</string>
    <string name="tel_7252300">Tel. 7252300</string>
    <string name="calle_22sur_78b_82">Calle 22Sur 78B-82</string>
    <string name="tel_5362047">Tel. 5362047</string>
    <string name="calle_87_11_43">Calle 87 #11-43</string>
    <string name="descSuc2">Nuestra sucursal Kennedy cuenta con 34 mesas en 2 pisos. Servicio de repostería, cafetería y desayunos.</string>
    <string name="tel_6787606">Tel. 6787606</string>
    <string name="kennedy">Kennedy</string>
    <string name="chic_norte">Chicó Norte</string>
    <string name="descSuc3">Nuestra sucursal del Norte tiene nuestros mejores productos. Instalaciones modernas y cómodas de alta calidad.</string>
    <string name="txt_contraseña">Contraseña</string>
    <string name="title_prod1">Croissants</string>
    <string name="desc_prod1">relleno de queso con bocadillo</string>
    <string name="price_prod1">Unidad : $3.500</string>
    <string name="title_prod2">Pan Trenza</string>
    <string name="desc_prod2">Relleno de queso</string>
    <string name="price_prod2">unidad : $5.000</string>
    <string name="title_prod3">Pan Aliñado</string>
    <string name="desc_prod3">paquete por 10 unidades</string>
    <string name="price_prod3">Precio : $3.000</string>
    <string name="title_prod4">Cupcakes</string>
    <string name="desc_prod4">Sabores surtidos</string>
    <string name="price_prod4">unidad : $4.500</string>
    <string name="info_text">Información general</string>
    <string name="desc_text">Pan caliente a toda hora!!!</string>
    <string name="tel_text">Telefono: 321 2149353</string>
    <string name="txt_usuario">Usuario</string>
    <string name="title_servicio">EVENTOS SOCIALES O DE NEGOCIOS A DOMICILIO</string>
    <string name="descServ1">Escoge en nuestro menú tus productos favoritos para atender tus celebraciones o reuniones empresariales en el lugar que escojas.</string>
    <string name="nameServ2">DESAYUNOS DE TRABAJO Y EVENTOS EMPRESARIALES</string>
    <string name="descServ2">Además de nuestra amplia variedad de deliciosos productos, contamos con un salón amplio y agradable para tus reuniones de negocios.</string>
    <string name="nameServ3">PRODUCTOS PERSONALIZADOS</string>
    <string name="descServ3">Personaliza tu pastel,  cheesecake, cupcakes o galletas para tus celebraciones o eventos sociales y de negocios.</string>
    <string name="nameServ4">DOMICILIOS</string>
    <string name="descServ4">Todos nuestros deliciosos productos en tu puerta para que disfrutes de su sabor y su frescura sin moverte de tu casa o de tu oficina.</string>
    <string name="disponi">Sujeto a disponibilidad y cobertura</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Panceto</string>
    <string name="nav_header_subtitle">panceto@panceto.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_close">Cerrar sesión</string>
    <string name="action_buy">Carrito de compras</string>
    <string name="correo_hint">Escribe tu usuario</string>
    <string name="contraseña_hint">Escribe tu contraseña</string>
    <string name="btn1_hint">iniciar</string>
    <string name="btn2_hint">Registrar</string>
    <string name="menu_home">Productos</string>
    <string name="menu_gallery">Servicios</string>
    <string name="menu_slideshow">Sucursales</string>
    <string name="addToFavorite">Se añadió a favoritos</string>
    <string name="btnsqltext1">Listar productos</string>
    <string name="opcioncrud">CRUD</string>
    <string name="opcionubicaciones">Ubicaciones</string>
    <string name="txt_codigo">Código del producto</string>
    <string name="txt_descripcion">Descripción del producto</string>
    <string name="txt_precio">Precio del producto</string>
    <string name="BotonRegistrar">Registrar Producto</string>
    <string name="BotonBuscar">Buscar Producto</string>
    <string name="BotonEliminar">Eliminar Producto</string>
    <string name="BotonModificar">Modificar Producto</string>
</resources>