<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ListarActivity">

    <TextView
        android:id="@+id/productoName"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:background="@drawable/banner"
        android:fontFamily="@font/acme_regular"
        android:text="@string/menu_home"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:ems="10"
        android:hint="@string/txt_producto"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txt_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/txt_descripcion"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txt_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/txt_precio"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/BotonRegistrar" />

            <Button
                android:id="@+id/btnActualiza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/BotonModificar" />

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/BotonEliminar" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSQL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/acme_regular"
                android:text="@string/btnsqltext1" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ListView
                android:id="@+id/listViewData"
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:background="@color/clean_yellow" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>