<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    tools:context=".ui.slideshow.SlideshowFragment">

    <TextView
        android:id="@+id/sucursalesName"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:background="@drawable/banner"
        android:fontFamily="@font/acme_regular"
        android:text="@string/menu_slideshow"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:backgroundTint="@color/design_default_color_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal"
                android:gravity="center">


                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:src="@drawable/foto_centro" />

                <LinearLayout
                    android:layout_width="259dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sucDescription1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fuzzybubbles_regular"
                        android:text="@string/descSuc1"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sucAddress1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme_regular"
                        android:text="@string/carrera_10_34_14"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sucTitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme_regular"
                        android:text="@string/bogot_centro"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sucPhone1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme_regular"
                        android:text="@string/tel_7252300"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal"
                android:gravity="center">


                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:src="@drawable/foto_kennedy" />

                <LinearLayout
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sucDescription2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fuzzybubbles_regular"
                        android:text="@string/descSuc2"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sucAddress2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme_regular"
                        android:text="@string/calle_22sur_78b_82"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sucTitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme_regular"
                        android:text="@string/kennedy"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sucPhone2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme_regular"
                        android:text="@string/tel_6787606"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal"
                android:gravity="center">


                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:src="@drawable/foto_chico" />

                <LinearLayout
                    android:layout_width="263dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/sucDescription3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fuzzybubbles_regular"
                        android:text="@string/descSuc3"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sucAddress3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme_regular"
                        android:text="@string/calle_87_11_43"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sucTitle3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme_regular"
                        android:text="@string/chic_norte"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sucPhone3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme_regular"
                        android:text="@string/tel_5362047"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>

