<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/serviciosName"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@drawable/banner"
        android:fontFamily="@font/acme_regular"
        android:text="@string/menu_gallery"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:backgroundTint="@color/design_default_color_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal"
                android:gravity="center">


                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:src="@drawable/buffet" />

                <LinearLayout
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameServi1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme_regular"
                        android:text="@string/title_servicio"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/descServ1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fuzzybubbles_regular"
                        android:text="@string/descServ1"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:gravity="center">


                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:src="@drawable/desayuno" />

                <LinearLayout
                    android:layout_width="255dp"
                    android:layout_height="150dp"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameServ2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme_regular"
                        android:text="@string/nameServ2"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/descServ2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fuzzybubbles_regular"
                        android:text="@string/descServ2"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal"
                android:gravity="center">


                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:src="@drawable/pastel" />

                <LinearLayout
                    android:layout_width="257dp"
                    android:layout_height="150dp"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameServ3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme_regular"
                        android:text="@string/nameServ3"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/descServ3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fuzzybubbles_regular"
                        android:text="@string/descServ3"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:src="@drawable/domicilio" />

                <LinearLayout
                    android:layout_width="261dp"
                    android:layout_height="160dp"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameServ4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme_regular"
                        android:text="@string/nameServ4"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/descServ4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fuzzybubbles_regular"
                        android:text="@string/descServ4"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/disponi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme_regular"
                        android:text="@string/disponi"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>

